# ockam-risc0

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
starter/: Cargo.toml
starter/src/: main.rs
