[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[lib]
path = "lib.rs"

[build-dependencies]
risc0-build = { git = "https://github.com/stskeeps/risc0.git" }

[package.metadata.risc0]
methods = ["guest"]

[patch.crates-io]
radium = { git = "https://github.com/stskeeps/radium", branch = "fix-0.6.2" }
